--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     height: 3306px;
 }
 /* header  */
+
 .header{
  display: flex;
  justify-content: space-between;
@@ -15,7 +16,7 @@ body{
  align-items: center;
 }
 .icon{
-    margin-left: 133px;
+    margin-left: 8.33%;
     font-size: 24px;
 }
 .menu{
@@ -23,25 +24,40 @@ body{
  align-items: center;
  gap: 20px;
 }
-/* top-part  */
-.menu-1{
-    width: 582px;
-    height: 133px;
-    margin-left: 113px;
-    margin-top: 283px;
-    font-weight: 700px;
-    font-size: 32px;
-    color: #3A3A3A;
+
+.banner-container{
+    display: flex;
+    justify-content: space-around;
+}
+.banner-text{
+  width: 584px;  
+  height: 270px;
+  margin-left: 40px;
+  margin-top: 283px;
+}
+button{
+    width: 116px;
+    height: 24px;
+    background-color:  #E02C6D;
+    border-radius: 41px;
+    color: #FFFFFF;
+    border: 1px solid #E02C6D ;
+}
+.fa-solid{
+    color: #FFFFFF;
+}
+.logos-container{
+    display: flex;
+    width: 1110px;
+    height: 110px;
+    margin-left: 165px;
 
 }
-.menu-2{
-    margin-left: 8.4%;
-    margin-right: 56.53%;
-  
-    font-weight: 600;
-    font-size: 16px;
-    color: #3A3A3A;
-}
-.button{
-    margin-left: 113px;
+.logos-container img{
+    margin-left: 20px;
+} 
+.logos-menu{
+    width: 986px;
+    height: 40px;
+    margin-left: 227px;
 }
